// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageContentBody template restrict width can be set to a custom number 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-custom"
  style="max-width:1024px"
/>
`;

exports[`EuiPageContentBody template restrict width can be set to a custom value and does not override custom style 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-custom"
  style="color:red;max-width:24rem"
/>
`;

exports[`EuiPageContentBody template restrict width can be set to a default 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--flexGrowZero euiPageContentBody euiPageContentBody--restrictWidth-default"
/>
`;
